src/log/build_2022-02-18_19-31-28/humanpose/stdout_stderr.log
running egg_info
writing ../build/humanpose/humanpose.egg-info/PKG-INFO
writing dependency_links to ../build/humanpose/humanpose.egg-info/dependency_links.txt
writing entry points to ../build/humanpose/humanpose.egg-info/entry_points.txt
writing requirements to ../build/humanpose/humanpose.egg-info/requires.txt
writing top-level names to ../build/humanpose/humanpose.egg-info/top_level.txt
writing manifest file '../build/humanpose/humanpose.egg-info/SOURCES.txt'
running build
running build_py
copying humanpose/networks/fcn16s.py -> /home/jakeluo/Documents/MonitoringSystemRos2/src/build/humanpose/build/lib/humanpose/networks
running install
running install_lib
copying /home/jakeluo/Documents/MonitoringSystemRos2/src/build/humanpose/build/lib/humanpose/networks/fcn16s.py -> /home/jakeluo/Documents/MonitoringSystemRos2/src/install/humanpose/lib/python3.8/site-packages/humanpose/networks
byte-compiling /home/jakeluo/Documents/MonitoringSystemRos2/src/install/humanpose/lib/python3.8/site-packages/humanpose/networks/fcn16s.py to fcn16s.cpython-38.pyc
  File "/home/jakeluo/Documents/MonitoringSystemRos2/src/install/humanpose/lib/python3.8/site-packages/humanpose/networks/fcn16s.py", line 60
    return torch.from_numpy(weight).float()
    ^
SyntaxError: 'return' outside function

running install_data
running install_egg_info
removing '/home/jakeluo/Documents/MonitoringSystemRos2/src/install/humanpose/lib/python3.8/site-packages/humanpose-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../build/humanpose/humanpose.egg-info to /home/jakeluo/Documents/MonitoringSystemRos2/src/install/humanpose/lib/python3.8/site-packages/humanpose-0.0.0-py3.8.egg-info
running install_scripts
Installing estimater script to /home/jakeluo/Documents/MonitoringSystemRos2/src/install/humanpose/lib/humanpose
writing list of installed files to '/home/jakeluo/Documents/MonitoringSystemRos2/src/build/humanpose/install.log'
